# embeded_res_analyzer

./: .gitignore  README.md  object_section_stats.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test_all_apis.py  test_simple.py
backend/app/: main.py
docs/: TECH_STACK.md  openapi.json
frontend/static/: config_test.html  index.html
scripts/: check_environment.py  generate_api_docs.py  test_package.py  verify_tech_stack.py
src/embedded_analyzer/: __init__.py  cli.py  config.py
src/embedded_analyzer/api/: main.py
src/embedded_analyzer/api/routers/: analysis.py  config.py
src/embedded_analyzer/config/: manager.py
src/embedded_analyzer/core/: __init__.py  analyzer.py  exceptions.py  models.py  objdump_parser.py  toolchain_manager.py
src/embedded_analyzer/core/models/: config_models.py  directory_models.py  statistics_models.py  workspace_models.py
src/embedded_analyzer/core/parsers/: __init__.py  base_parser.py  parser_factory.py  readelf_parser.py  size_parser.py
src/embedded_analyzer/core/utils/: file_utils.py  lazy_import.py  validation.py
src/embedded_analyzer/tui/: __init__.py  app.py
src/embedded_analyzer/tui/screens/: config_screen.py
src/embedded_analyzer/tui/widgets/: __init__.py  completion_input.py  path_input.py  section_input.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_objdump_parser.py
tests/integration/: test_full_workflow.py
tests/unit/: test_basic_imports.py  test_config_manager.py  test_config_models.py  test_parsers.py  test_pydantic_compatibility.py  test_serialization.py  test_toolchain_manager.py
